k8s_deploy/dev/api-weather-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-weather-deployment
  labels:
    app: api-weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-weather
  template:
    metadata:
      labels:
        app: api-weather
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 80
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - api-weather
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: api-weather
          image: docker.io/agoneek/api-weather:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          livenessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
