k8s_deploy/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-weather-service-dev
  namespace: dev
spec:
  selector:
    app: api-weather-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
